# pat-collection-app

./: codemagic.yaml  main.py  pyproject.toml
