[project]
name = "preciospc"
version = "0.1.0"
description = "app para precios y etiquetas"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet[mobile]>=0.82.2",
    "pillow>=10.4.0",
    "python-barcode[images]>=0.16.1",
    "reportlab>=4.4.10",
    "requests>=2.32.5",
]
[tool.flet.android]
permissions = [
    "android.permission.WRITE_EXTERNAL_STORAGE",
    "android.permission.READ_EXTERNAL_STORAGE",
    "android.permission.MANAGE_EXTERNAL_STORAGE",
]
[tool.flet.ios]
info_plist = [
    "NSPhotoLibraryAddUsageDescription=Guardar etiquetas de productos",
    "NSPhotoLibraryUsageDescription=Acceso a fotos para guardar etiquetas",
    "NSDocumentsUsageDescription=Guardar etiquetas en Documentos",
]
